build: 添加部署配置文件 (render.yaml, requirements.txt)

--- a/camera_projects/face_recognition_system/requirements.txt
+++ b/camera_projects/face_recognition_system/requirements.txt
@@ -1,11 +1,9 @@
-face-recognition
-opencv-python
-ultralytics
-scipy
-Pillow
-tensorflow
-deepface
-tf-keras
-flask
-flask-cors
-psutil 
+Flask
+Flask-Cors
+gunicorn
+gevent
+opencv-python-headless
+numpy
+face_recognition
+dlib
+Pillow 
